[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masumi_orchestra_template"
version = "0.1.0"
description = "Masumi Orchestra Template"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[tool.setuptools]
packages = ["masumi_orchestra_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
